--- a/GossipTarot_VSProject/GossipTarot_VSProject/GossipTarot_VSProject.vcxproj.filters
+++ b/GossipTarot_VSProject/GossipTarot_VSProject/GossipTarot_VSProject.vcxproj.filters
@@ -38,6 +38,12 @@
     <None Include="Assets\Shaders\CompressedVoxelWithTexturesShader\CompressedVoxelWithTexturesShader.vert" />
     <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFace\CompressedVoxelWithTexturesShaderPerFace.frag" />
     <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFace\CompressedVoxelWithTexturesShaderPerFace.vert" />
+    <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFaceVBOData\CompressedVoxelWithTexturesShaderPerFaceVBOData.frag" />
+    <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFaceVBOData\CompressedVoxelWithTexturesShaderPerFaceVBOData.vert" />
+    <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFaceVBODataAsTriangle\CompressedVoxelWithTexturesShaderPerFaceVBODataAsTriangle.frag" />
+    <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFaceVBODataAsTriangle\CompressedVoxelWithTexturesShaderPerFaceVBODataAsTriangle.vert" />
+    <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFaceSSBODataAsTriangle\CompressedVoxelWithTexturesShaderPerFaceSSBODataAsTriangle.frag" />
+    <None Include="Assets\Shaders\CompressedVoxelWithTexturesShaderPerFaceSSBODataAsTriangle\CompressedVoxelWithTexturesShaderPerFaceSSBODataAsTriangle.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileHandling.h">
