--- a/GossipTarot_VSProject/GossipTarot_VSProject/GossipTarot_VSProject.vcxproj
+++ b/GossipTarot_VSProject/GossipTarot_VSProject/GossipTarot_VSProject.vcxproj
@@ -171,7 +171,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ChunkGeneration.h" />
     <ClInclude Include="Colour.h" />
-    <ClInclude Include="DrawElementsIndirect.h" />
+    <ClInclude Include="ChunksPerFaceDrawElementsIndirectCommands.h" />
     <ClInclude Include="FileHandling.h" />
     <ClInclude Include="GLMIncludes.h" />
     <ClInclude Include="GlobalConstants.h" />
